--- a/FestiFact.WebUI/FestiFact.WebUI.csproj
+++ b/FestiFact.WebUI/FestiFact.WebUI.csproj
@@ -229,7 +229,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Areas\Manager\Views\web.config" />
-    <Content Include="Areas\Manager\Views\Manager\AddOrUpdateOrganisation.cshtml" />
+    <Content Include="Areas\Manager\Views\Manager\UpdateOrganisation.cshtml" />
     <Content Include="Areas\Manager\Views\Manager\Overview.cshtml" />
     <Content Include="Areas\Organisator\Views\web.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
